--- a/css/styles.css
+++ b/css/styles.css
@@ -350,10 +350,6 @@ button {
   color: var(--light-color);
 }
 
-.footer-container {
-  display: flex;
-}
-
 .footer-about-container {
   margin-right: 120px;
 }
@@ -426,6 +422,8 @@ button {
   color: var(--light-text-color);
   border: 1px solid var(--pressed-state-color);
   background-color: var(--pressed-state-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-element-list {
@@ -434,6 +432,12 @@ button {
 
 .portfolio-element-list-item {
   width: calc((100% - 48px) / 3);
+}
+
+.portfolio-element-list-item:hover,
+.portfolio-element-list-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-card {
