--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ button {
     url(../images/background-hero-people-office.jpg);
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: cover;
+  background-size: 1440px;
 }
 
 .hero-main-title {
@@ -247,9 +247,11 @@ button {
 
 /* =============== OUR QUALITIES =============== */
 .our-qua-list-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 264px;
   height: 112px;
-  padding: 24px 100px;
   border-radius: 4px;
   background-color: var(--light-color);
 }
@@ -293,11 +295,14 @@ button {
 }
 
 .team-list-card_social-list-link {
-  padding: 12px;
+  justify-content: center;
+  align-items: center;
   background-color: var(--primary-brand-color);
 }
 
 .team-list-card_social-list-icon {
+  width: 16px;
+  height: 16px;
   fill: var(--light-text-color);
 }
 
@@ -322,7 +327,8 @@ button {
   display: flex;
   width: 168px;
   height: 88px;
-  padding: 16px 32px;
+  justify-content: center;
+  align-items: center;
   border: 1px solid var(--subtle-text-color);
   border-radius: 4px;
   color: var(--subtle-text-color);
@@ -335,6 +341,8 @@ button {
 }
 
 .customers-list-icon {
+  width: 104px;
+  height: 56px;
   fill: currentColor;
 }
 
@@ -373,7 +381,8 @@ button {
 }
 
 .footer-social-list-link {
-  padding: 8px;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -383,6 +392,8 @@ button {
 }
 
 .footer-social-list-icon {
+  width: 24px;
+  height: 24px;
   fill: var(--light-text-color);
 }
 
@@ -434,8 +445,12 @@ button {
   width: calc((100% - 48px) / 3);
 }
 
-.portfolio-element-list-item:hover,
-.portfolio-element-list-item:focus {
+.portfolio-element-list-link {
+  display: block;
+}
+
+.portfolio-element-list-link:hover,
+.portfolio-element-list-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
